--- a/styles/common/reset.scss
+++ b/styles/common/reset.scss
@@ -9,4 +9,9 @@
  *                   别人笑我忒疯癫，我笑自己命太贱；  
  *                   不见满街漂亮妹，哪个归得程序员？
  */
+@import './common/var';
 
+* {
+  padding: 0;
+  margin: 0;
+}
