--- a/styles/common/_var.scss
+++ b/styles/common/_var.scss
@@ -22,3 +22,16 @@
  *        ┃┫┫　┃┫┫
  *        ┗┻┛　┗┻┛
  */
+
+ /* color */
+ $primary: #409EFF;
+ $white: #FFFFFF;
+ $black: #000000;
+ $success: #67C23A;
+ $warning: #E6A23C;
+ $danger: #F56C6C;
+ $info: #909399;
+
+/* size */
+$fontSize: 14px;
+$borderRadius: 4;
