--- a/styles/mixins/config.scss
+++ b/styles/mixins/config.scss
@@ -1,5 +1,5 @@
-$name-space: 'gjf';
+$name-space: 'axe';
 $separator: '-';
 $modifier-separator: '--';
 $state-prefix: 'is-';
-$name-prefix: '.' + $name-space + $separator // '.gjf-'
+$name-prefix: '.' + $name-space + $separator // '.axe-'
