--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ body{
   padding: 45px 20px;
 }
 .area{
-  margin: 10px 0 20px;
-  padding: 20px;
+  margin: 20px 0;
+  padding: 45px 20px;
   background: #fbfbfb;
   border: 1px solid #eee;
   border-radius: 4px;
