--- a/styles/common/_var.scss
+++ b/styles/common/_var.scss
@@ -57,5 +57,8 @@ $color-list-active: (
 );
 
 /* size */
-$font-size: 14px;
-$border-radius: 4;
+$font-size: 18px;
+$border-radius: 50;
+$padding-vertical: 22;
+$padding-standard: 48;
+
