--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -8,3 +8,5 @@ $accent-color:         #FFC107;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
+$bg-color: #22313f;
+$text-color: #d8b688;
