--- a/styles/common/reset.scss
+++ b/styles/common/reset.scss
@@ -2,8 +2,8 @@
  v2.0 | 20110126
  License: none (public domain)
  */
-@import './common/var';
-@import './fonts/_font';
+@import 'axe-ui/styles/common/_var.scss';
+@import 'axe-ui/styles/fonts/_font.scss';
 
 html,
 body,
