icon: add components style

--- a/styles/common/_var.scss
+++ b/styles/common/_var.scss
@@ -57,8 +57,10 @@ $color-list-active: (
 );
 
 /* size */
-$font-size: 18px;
-$border-radius: 50;
-$padding-vertical: 22;
-$padding-standard: 48;
+$font-size: 14px;
+$border-radius: 4;
+$padding-vertical: 7;
+$padding-standard: 15;
 
+/* font */
+$fontPath: './iconfonts/'
