--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body{
 }
 .area{
   margin: 20px 0;
-  padding: 45px 20px;
+  padding: 20px;
   background: #fbfbfb;
   border: 1px solid #eee;
   border-radius: 4px;
