--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,17 @@ body{
   border-radius: 4px;
   box-shadow: 1px 3px 5px #ccc;
 }
-.area h3{
-  margin-bottom: 10px;
+.area {
+  h3{
+    margin-bottom: 10px;
+  }
+  p{
+    padding: 5px 0;
+  }
+  .demo-title {
+    font-size: 16px;
+    font-weight: bold;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 10px;
+  }
 }
