Chore: make new

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,6 @@
 @import './base.scss';
-@import './icon.scss';
 @import './button.scss';
+@import './button-group.scss';
+@import './icon.scss';
+@import './card.scss';
+@import './input.scss';
